--- a/package.json
+++ b/package.json
@@ -1,20 +1,36 @@
 {
+  "name": "nuber-server",
+  "version": "1.0.0",
+  "description": "Sever for the (N)Uber Clone Course on Nomad Academy. GraphQL, Typescript, NodeJS",
+  "main": "index.js",
+  "repository": "https://github.com/Yuni-Q/nuber-server.git",
+  "author": "Yuni-Q <carnotcycle2@naver.com>",
+  "license": "MIT",
   "devDependencies": {
-    "@types/node": "^10.9.4",
-    "nodemon": "^1.18.4",
+    "@types/node": "^10.12.3",
+    "babel-runtime": "^6.26.0",
+    "gql-merge": "^0.0.6",
+    "graphql-to-typescript": "^0.1.2",
+    "nodemon": "^1.18.6",
     "ts-node": "^7.0.1",
     "tslint-config-prettier": "^1.15.0",
-    "typescript": "^3.0.3"
+    "typescript": "^3.1.6"
   },
   "scripts": {
-    "dev": "cd src && nodemon --exec ts-node index.ts -e ts,graphql"
+    "dev": "cd src && nodemon --exec ts-node index.ts",
+    "pretypes": "gql-merge --out-file ./src/schema.graphql ./src/api/**/*.graphql",
+    "types": "graphql-to-typescript ./src/schema.graphql ./src/types/graph.d.ts"
   },
   "dependencies": {
-    "cors": "^2.8.4",
-    "graphql-tools": "^3.1.1",
-    "graphql-yoga": "^1.16.2",
-    "helmet": "^3.13.0",
-    "merge-graphql-schemas": "^1.5.3",
-    "morgan": "^1.9.1"
+    "cors": "^2.8.5",
+    "graphql": "^14.0.2",
+    "graphql-tools": "^4.0.3",
+    "graphql-yoga": "^1.16.7",
+    "helmet": "^3.15.0",
+    "merge-graphql-schemas": "^1.5.7",
+    "morgan": "^1.9.1",
+    "path": "^0.12.7",
+    "pg": "^7.6.1",
+    "typeorm": "^0.2.8"
   }
 }
