--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Yuni-Q <carnotcycle2@naver.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/node": "^10.12.3",
     "babel-runtime": "^6.26.0",
     "gql-merge": "^0.0.6",
@@ -22,6 +23,7 @@
     "types": "graphql-to-typescript ./src/schema.graphql ./src/types/graph.d.ts"
   },
   "dependencies": {
+    "bcrypt": "^3.0.2",
     "class-validator": "^0.9.1",
     "cors": "^2.8.5",
     "dotenv": "^6.1.0",
