--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/node": "^10.12.3",
+    "@types/twilio": "^0.0.10",
     "babel-runtime": "^6.26.0",
     "gql-merge": "^0.0.6",
     "graphql-to-typescript": "^0.1.2",
@@ -36,6 +37,7 @@
     "morgan": "^1.9.1",
     "path": "^0.12.7",
     "pg": "^7.6.1",
+    "twilio": "^3.23.2",
     "typeorm": "^0.2.8"
   }
 }
