--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/jsonwebtoken": "^8.3.0",
     "@types/node": "^10.12.3",
     "@types/twilio": "^0.0.10",
     "babel-runtime": "^6.26.0",
@@ -33,6 +34,7 @@
     "graphql-tools": "^4.0.3",
     "graphql-yoga": "^1.16.7",
     "helmet": "^3.15.0",
+    "jsonwebtoken": "^8.4.0",
     "merge-graphql-schemas": "^1.5.7",
     "morgan": "^1.9.1",
     "path": "^0.12.7",
