--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "types": "graphql-to-typescript ./src/schema.graphql ./src/types/graph.d.ts"
   },
   "dependencies": {
+    "@types/mailgun-js": "^0.16.1",
     "bcrypt": "^3.0.2",
     "class-validator": "^0.9.1",
     "cors": "^2.8.5",
@@ -35,6 +36,7 @@
     "graphql-yoga": "^1.16.7",
     "helmet": "^3.15.0",
     "jsonwebtoken": "^8.4.0",
+    "mailgun-js": "^0.22.0",
     "merge-graphql-schemas": "^1.5.7",
     "morgan": "^1.9.1",
     "path": "^0.12.7",
