--- a/src/.env
+++ b/src/.env
@@ -1,5 +1,5 @@
 DB_ENDPOINT=localhost
-DB_USERNAME=postgres
+DB_USERNAME=yunheelee
 JWT_TOKEN=afgagagdsSGSHEEYDGFDG97G8W7G89F8GDSG7
 DB_PASSWORD =
 TWILIO_SID=
